--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -17,6 +17,11 @@ motor = "^3.6.0"
 passlib = "^1.7.4"
 bcrypt = "^4.2.1"
 pyjwt = "^2.10.1"
+sqlalchemy = "^2.0.36"
+alembic = "^1.14.0"
+asyncpg = "^0.30.0"
+psycopg2-binary = "^2.9.10"
+greenlet = "^3.1.1"
 
 
 [build-system]
